--- a/package.json
+++ b/package.json
@@ -31,20 +31,27 @@
         "@babel/core": "^7.17.2",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.17.12",
         "@types/react": "^17.0.45",
         "@types/react-dom": "^18.0.5",
         "@types/webpack-env": "^1.17.0",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
         "@typescript-eslint/parser": "^5.26.0",
         "autoprefixer": "^10.4.7",
+        "copyfiles": "^2.4.1",
+        "css-loader": "^6.7.1",
         "babel-loader": "^8.2.3",
         "eslint": "^8.16.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "node-polyfill-webpack-plugin": "^1.1.4",
         "postcss": "^8.4.14",
         "postcss-loader": "^7.0.0",
         "prettier": "2.6.2",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-hot-loader": "^4.13.0",
+        "style-loader": "^3.3.1",
         "tailwindcss": "^3.1.2",
         "ts-loader": "^9.3.0",
         "typescript": "^4.7.3",
@@ -53,18 +60,13 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
-        "@babel/preset-typescript": "^7.17.12",
         "classnames": "^2.3.1",
-        "copyfiles": "^2.4.1",
-        "css-loader": "^6.7.1",
-        "node-polyfill-webpack-plugin": "^1.1.4",
-        "react": "^16.0.2",
-        "react-dom": "^16.0.2",
         "react-icons": "^4.4.0",
         "rodal": "^1.8.3",
-        "style-loader": "^3.3.1",
         "swiftyper-node": "^1.0.6",
-        "typeface-roboto": "^1.1.13",
-        "typescript": "^3.7.5"
+        "typeface-roboto": "^1.1.13"
+    },
+    "peerDependencies": {
+        "react": "^16.13.1"
     }
 }
