--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "webpack serve --config ./webpack.config.js --mode development",
         "build": "npm run webpack:build && npm run ts:build && npm run tw:build && npm run copy:css",
         "webpack:build": "webpack --mode=production && webpack --mode=production --env minified",
-        "tw:build": "tailwindcss ./src/App.css -o ./lib/App.css",
+        "tw:build": "tailwindcss src/index.css -o ./lib/App.css",
         "ts:build": "tsc",
         "lint": "eslint . --ext .ts,.tsx",
         "copy:css": "copyfiles -u 1 src/rodal.css lib/",
@@ -34,6 +34,7 @@
     "devDependencies": {
         "@babel/core": "^7.17.2",
         "@babel/preset-env": "^7.16.11",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.17.12",
         "@types/react": "^17.0.45",
