--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": false,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "paths": {
+            "@/*": ["./src/*"],
+        }
     },
     "include": ["src"]
 }
