--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.17.2",
-        "@babel/preset-env": "^7.16.11",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.17.12",
-        "@types/react": "^17.0.45",
-        "@types/react-dom": "^18.0.5",
+        "@types/react": "^18.1.0",
+        "@types/react-dom": "^18.1.0",
         "@types/webpack-env": "^1.17.0",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
         "@typescript-eslint/parser": "^5.26.0",
@@ -53,9 +53,8 @@
         "postcss": "^8.4.14",
         "postcss-loader": "^7.0.0",
         "prettier": "2.6.2",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-hot-loader": "^4.13.0",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
         "style-loader": "^3.3.1",
         "tailwindcss": "^3.1.2",
         "ts-loader": "^9.3.0",
@@ -71,6 +70,6 @@
         "typeface-roboto": "^1.1.13"
     },
     "peerDependencies": {
-        "react": "^15 || ^16 || ^17 || ^18"
+        "react": "^18 || ^19"
     }
 }
